<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DreamDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/dream_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                tools:src="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/dream_image"
                android:background="#D3D3D3"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/dream_photo"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/dream_photo"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/dream_title_label"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dream_title_label" />

                <EditText
                    android:id="@+id/dream_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/dream_title_hint"
                    android:inputType="text" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/dream_fulfilled_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dream_fulfilled_label"
                        app:layout_constraintEnd_toStartOf="@+id/dream_deferred_checkbox"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <CheckBox
                        android:id="@+id/dream_deferred_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dream_deferred_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/dream_fulfilled_checkbox"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



        <LinearLayout
            android:id="@+id/dream_entry_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dream_entries_label"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dream_entries_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dream_entry_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reflection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_reflection_button"
        android:src="@drawable/ic_icon_add_foreground" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>